--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
   <link rel="icon" type="image/svg+xml" href="" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Velvety - Beauty and Wellness</title>
+
+  <!-- modern-normalize -->
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" />
+
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
