--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
     <!-- Loads the specified .html file -->
     <load src="./partials/hero.html" />
     <load src="./partials/about.html" />
+    <load src="./partials/contact.html" />
     <load src="./partials/subscribe.html" />
   </main>
 
