--- a/src/index.html
+++ b/src/index.html
@@ -35,5 +35,6 @@
 
     <script type="module" src="./main.js"></script>
     <script type="module" src="./js/header.js"></script>
+    <script type="module" src="./js/modal.js"></script>
   </body>
 </html>
