--- a/src/index.html
+++ b/src/index.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Velvety - Beauty and Wellness</title>
 
-    <!-- modern-normalize -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
-    />
-    <!-- GoogleFonts -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,300;6..96,400;6..96,500;6..96,600;6..96,700&family=Poppins:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="./public/favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Velvety - Beauty and Wellness</title>
 
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
+  <!-- modern-normalize -->
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" />
+  <!-- GoogleFonts -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,300;6..96,400;6..96,500;6..96,600;6..96,700&family=Poppins:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet" />
 
-  <body>
-    <load src="./partials/header.html" />
+  <link rel="stylesheet" href="./css/styles.css" />
+</head>
 
-    <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/hero.html" />
-      <load src="./partials/about.html" />
-      <load src="./partials/contact.html" />
-      <load src="./partials/subscribe.html" />
-    </main>
+<body>
+  <load src="./partials/header.html" />
 
-    <load src="./partials/footer.html" />
+  <main>
+    <!-- Loads the specified .html file -->
+    <load src="./partials/hero.html" />
+    <load src="./partials/featured.html" />
+    <load src="./partials/about.html" />
+    <load src="./partials/contact.html" />
+    <load src="./partials/subscribe.html" />
+  </main>
 
-    <script type="module" src="./main.js"></script>
-    <script type="module" src="./js/header.js"></script>
-    <script type="module" src="./js/modal.js"></script>
-  </body>
+  <load src="./partials/footer.html" />
+
+  <script type="module" src="./main.js"></script>
+  <script type="module" src="./js/header.js"></script>
+  <script type="module" src="./js/modal.js"></script>
+</body>
+
 </html>
