--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
     <load src="./partials/hero.html" />
     <load src="./partials/featured.html" />
     <load src="./partials/about.html" />
-    <load src="./partials/service.html" />
+    <load src="./partials/diagnosis.html" />
     <load src="./partials/testimonials.html" />
     <load src="./partials/contact.html" />
     <load src="./partials/subscribe.html" />
