--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
     <load src="./partials/featured.html" />
     <load src="./partials/about.html" />
     <load src="./partials/products.html" />
+    <load src="./partials/diagnosis.html" />
     <load src="./partials/testimonials.html" />
     <load src="./partials/contact.html" />
     <load src="./partials/subscribe.html" />
